fluxcd/infrastructure/common/resources/kiali-service/httpGateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: istio-system
spec:
  parentRefs:
    - name: istio-gateway
      namespace: istio-system
  hostnames:
    - kiali.admin.${domain}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kiali
          port: 20001
